--- a/MediaCompose.yml
+++ b/MediaCompose.yml
@@ -5,12 +5,12 @@ services:
     container_name: sabnzbd
     environment:
       - PUID=1000
-      - PGID=100
+      - PGID=1000
       - TZ=America/Chicago
     volumes:
       - /home/Docker/sabnzdb/config:/config
-      - /mnt/share/Incoming:/downloads
-      - /mnt/share/Incoming/incomplete:/incomplete-downloads #optional
+      - /home/Docker/sabnzdb/downloads:/downloads
+      - /home/Docker/sabnzdb/Incomplete:/incomplete-downloads #optional
     ports:
       - 8080:8080
       - 9090:9090
@@ -20,12 +20,12 @@ services:
     container_name: sonarr
     environment:
       - PUID=1000
-      - PGID=100
+      - PGID=1000
       - TZ=America/Chicago
     volumes:
       - /home/Docker/sonarr:/config
-      - /mnt/share/TV:/tv
-      - /mnt/share/Incoming:/downloads
+      - /mnt/Media/TV:/tv
+      - /home/Docker/sabnzdb/downloads:/downloads
     ports:
       - 8989:8989
     restart: unless-stopped
@@ -34,12 +34,12 @@ services:
     container_name: radarr
     environment:
       - PUID=1000
-      - PGID=100
+      - PGID=1000
       - TZ=America/Chicago
     volumes:
       - /home/Docker/Radarr:/config
-      - /mnt/share/Movies:/movies #optional
-      - /mnt/share/Incoming:/downloads #optional
+      - /mnt/Media/Movies:/movies #optional
+      - /home/Docker/sabnzdb/downloads:/downloads #optional
     ports:
       - 7878:7878
     restart: unless-stopped
@@ -48,7 +48,7 @@ services:
     container_name: heimdall
     environment:
       - PUID=1000
-      - PGID=100
+      - PGID=1000
       - TZ=America/Chicago
     volumes:
       - /home/Docker/heimdall:/config
@@ -56,18 +56,28 @@ services:
       - 8181:80
       - 443:443
     restart: unless-stopped
-  jackett:
-    image: lscr.io/linuxserver/jackett
-    container_name: jackett
+  db:
+    image: postgres:11-alpine
     environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=America/Chicago
-      - AUTO_UPDATE=true #optional
-      - RUN_OPTS=<run options here> #optional
-    volumes:
-      - /home/Docker:/config
-      - /mnt/share/Incoming:/downloads
-    ports:
-      - 9117:9117
+      POSTGRES_DB: wiki
+      POSTGRES_PASSWORD: wikijsrocks
+      POSTGRES_USER: wikijs
+    logging:
+      driver: "none"
     restart: unless-stopped
+    volumes:
+      - /home/Docker/WikiJS:/var/lib/postgresql/data
+  wiki:
+    image: requarks/wiki:2
+    depends_on:
+      - db
+    environment:
+      DB_TYPE: postgres
+      DB_HOST: db
+      DB_PORT: 5432
+      DB_USER: wikijs
+      DB_PASS: wikijsrocks
+      DB_NAME: wiki
+    restart: unless-stopped
+    ports:
+      - 8484:3000
