--- a/MediaCompose.yml
+++ b/MediaCompose.yml
@@ -81,3 +81,15 @@ services:
     restart: unless-stopped
     ports:
       - 8484:3000
+  portainer:
+    image: portainer/portainer-ce:latest
+    container_name: portainer
+    restart: unless-stopped
+    security_opt:
+      - no-new-privileges:true
+    volumes:
+      - /etc/localtime:/etc/localtime:ro
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - /home/Docker/Portainer:/data
+    ports:
+      - 9000:9000
